--- a/src/webrecord/public/index.html
+++ b/src/webrecord/public/index.html
@@ -8,11 +8,12 @@
   <body>
 
     <!-- 将音频文件嵌入到页面中 -->
-    <audio id="audio" src="path/mp3" preload="auto"></audio>
+  
 
     <div id="msg" style="height:200px;width:400px;"></div>
     <button id="btn_play" size="50">問題Play</button>
-    <button id="btn" size="50">押下開始</button>
+    <button id="btn_start" size="50">押下開始</button>
+    <button id="btn_end" size="50">押下終了</button>
   </body>
   <script src="./javascripts/client.js" ></script>
 </html>
