--- a/src/webrecord/public/index.html
+++ b/src/webrecord/public/index.html
@@ -3,17 +3,14 @@
   <head>
     <meta charset="utf-8"/>
     <script src="/socket.io/socket.io.js" ></script>
- 
+    <script type="text/javascript" src="./js/recorder.js"></script>
   </head>
   <body>
 
     <!-- 将音频文件嵌入到页面中 -->
-  
-
     <div id="msg" style="height:200px;width:400px;"></div>
-    <button id="btn_play" size="50">問題Play</button>
     <button id="btn_start" size="50">押下開始</button>
     <button id="btn_end" size="50">押下終了</button>
   </body>
-  <script src="./javascripts/client.js" ></script>
+  <script src="./js/client.js" ></script>
 </html>
