record class化 vant import

--- a/src/webrecord/public/index.html
+++ b/src/webrecord/public/index.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8"/>
-    <script src="/socket.io/socket.io.js" ></script>
-    <script type="text/javascript" src="./js/recorder.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
 
-    <!-- 将音频文件嵌入到页面中 -->
-    <div id="msg" style="height:200px;width:400px;"></div>
-    <button id="btn_start" size="50">押下開始</button>
-    <button id="btn_end" size="50">押下終了</button>
-  </body>
-  <script src="./js/client.js" ></script>
+<!-- 引入样式文件 -->
+<link
+  rel="stylesheet"
+  href="https://fastly.jsdelivr.net/npm/vant@4/lib/index.css"
+/>
+
+<!-- 引入 Vue 和 Vant 的 JS 文件 -->
+<script src="https://fastly.jsdelivr.net/npm/vue@3"></script>
+<script src="https://fastly.jsdelivr.net/npm/vant@4/lib/vant.min.js"></script>
+
+<script>
+  // 在 #app 标签下渲染一个按钮组件
+  const app = Vue.createApp({
+    template: `<van-button>按钮</van-button>`,
+  });
+  app.use(vant);
+
+  // 通过 CDN 引入时不会自动注册 Lazyload 组件
+  // 可以通过下面的方式手动注册
+  app.use(vant.Lazyload);
+  // 调用工具函数，弹出一个 Toast
+  vant.showToast('提示');
+  app.mount('#app');
+</script>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
 </html>
